--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ before_install:
   - echo $TRAVIS_OS_NAME
   - echo ${HOME}
   - echo ${TRAVIS_BUILD_DIR}
+  - yes | sdkmanager "platforms;android-27"
   - gem install fastlane
   - git clone https://github.com/flutter/flutter.git -b stable --depth 1
   - cd photoducer
