--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_install:
 before_script:
   - openssl aes-256-cbc -k $ENCRYPTION_PASSWORD -in travis-ci-apk-upload.json.enc -d -a -out travis-ci-apk-upload.json
   - openssl aes-256-cbc -k $ENCRYPTION_PASSWORD -in photoducer/android/Photoducer_Distribution.keystore.enc -d -a -out photoducer/android/Photoducer_Distribution.keystore
-  - openssl aes-256-cbc -K $ENCRYPTION_PASSWORD -in research-storage-account.json.enc -d -a -out ${HOME}/research-storage-account.json
+  - openssl aes-256-cbc -k $ENCRYPTION_PASSWORD -in research-storage-account.json.enc -d -a -out ${HOME}/research-storage-account.json
   - export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/research-storage-account.json
   - echo storePassword=$KEYSTORE_PASSWORD >> photoducer/android/key.properties
   - echo keyPassword=$KEY_PASSWORD >> photoducer/android/key.properties
