--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ android:
     - tools
     - platform-tools
     - build-tools-28.0.3
+    - build-tools-27.0.3
     - android-27
     - extra-android-m2repository
     - extra-google-m2repository
