--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ android:
 
 cache:
   directories:
+  - "$HOME/flutter/"
   - "$HOME/google-cloud-sdk/"
 
 before_install:
@@ -37,10 +38,10 @@ before_install:
   - echo ${TRAVIS_BUILD_DIR}
   - yes | sdkmanager "platforms;android-27"
   - gem install fastlane
-  - git clone https://github.com/flutter/flutter.git -b stable --depth 1
+  - if [ ! -d "${HOME}/flutter/bin" ]; then rm -rf ${HOME}/flutter; git clone https://github.com/flutter/flutter.git -b stable --depth 1 ${HOME}/flutter; fi
   - cd photoducer
-  - ../flutter/bin/flutter doctor
-  - ../flutter/bin/flutter packages get
+  - ${HOME}/flutter/bin/flutter doctor
+  - ${HOME}/flutter/bin/flutter packages get
   - cd ..
 
 before_script:
@@ -60,11 +61,12 @@ script:
   - gsutil cp gs://research-model-bucket/yolov2_tiny.* assets
   - touch assets/edges2shoes.tflite
   - touch assets/edges2shoes.txt
-  - ../flutter/bin/flutter -v build apk --release
+  - ${HOME}/flutter/bin/flutter -v build apk --release
   - cd android
   - ./gradlew crashlyticsUploadSymbolsRelease
   - cd ../..
-  - fastlane submit_playalpha
+  - find . -name "*.so" -print
+  #- fastlane submit_playalpha
 
 after_success:
   - echo "success"
