--- a/.travis.yml
+++ b/.travis.yml
@@ -60,15 +60,15 @@ before_script:
 
 script:
   - cd photoducer
-  - gsutil cp gs://research-model-bucket/yolov2_tiny.* assets
+  - gsutil cp gs://greenappers/model/yolov2_tiny.* assets
   - touch assets/edges2shoes.tflite
   - touch assets/edges2shoes.txt
   - ${HOME}/flutter/bin/flutter -v build apk --release
   - cp -R ./build/app/intermediates/transforms/mergeJniLibs/release/0/lib debugSymbols
   - cd debugSymbols/armeabi-v7a
-  - mkdir debug
-  - gsutil cp gs://research-artifact-bucket/symbols/libflutter.so/`cat $HOME/flutter/bin/internal/engine.version`/armeabi-v7a/* debug
-  - unzip -o debug/*.zip
+  - gsutil cp gs://flutter_infra/flutter/`cat $HOME/flutter/bin/internal/engine.version`/android-arm-release/symbols.zip .
+  - unzip -o symbols.zip
+  - rm -rf symbols.zip
   - cd ../../android
   - ./gradlew crashlyticsUploadSymbolsRelease
   - cd ../..
